meganav style alignments and fixes

--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -6,24 +6,29 @@
 }
 
 .link-primary {
-  background: lightgray;
   display: inline-block;
-  margin-right: 0.5rem;
-  padding: 0.5rem;
   position: relative;
   &:hover {
-  	box-shadow: 0 0 2px #444,
-                inset 1px 0 0 gray,
-                inset -1px 0 0 gray,
-                inset 0 1px 0 gray;
     .links-sub {
       box-shadow: 0 1px 2px #444;
       opacity: 1;
       transition: opacity 0.2 ease;
     }
   }
-  a {
+  > a {
     color: black;
+    display: inline-block;
+    font-weight: bold;
+    margin-right: 1rem;
+	  padding: 0.5rem;
+	  position: relative;
+	  &:hover {
+	  	background: lightgray;
+	  	box-shadow: 0 0 2px #444,
+                inset 1px 0 0 gray,
+                inset -1px 0 0 gray,
+                inset 0 1px 0 gray;
+	  }
   }
   .col-1 {
     padding-right: 1rem;
@@ -37,7 +42,6 @@
     border: 1px solid gray;
     display: flex;
     flex-flow: row wrap;
-    margin: 0.5rem 0 0 -0.5rem;
     opacity: 0;
     padding: 1rem;
     position: absolute;
@@ -56,6 +60,6 @@
     margin-bottom: 0.5rem;
   }
   .push {
-    right: 0;
+    right: 1rem;
   }
 }
